Corrigio el error en el template login; ahora muestra listado de error al fallar el login y agrego interactividad en el formulario (coloreado al aver error), se agrego interactividad (coloreado de campos al enviar, ya sea error o valido) en los formularios de marca y producto. Por ultimo se mejoro el emun, en la seccion de usuario, mostrando sus datos y una interfaz para proximamente añadir funcionalidades

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -473,3 +473,42 @@ background-image: linear-gradient(45deg, rgba(235, 235, 235, 0.15) 25%, rgba(0, 
 .btx.active span.glyphicon {
 	opacity: 1;
 }
+
+/* Menu (seccion de usuario con imagen) */
+
+.navbar-login
+{
+    width: 305px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.navbar-login-session
+{
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.icon-size
+{
+    font-size: 87px;
+}
+
+/* Forms (Lista de errores de color rojo */
+
+.errorlist {
+            color: rgb(165, 58, 58);
+}
+
+/* Acoplamiento de la imagen el template de inicio de sesión */
+
+.profile-img {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
