--- a/templates/Producto/marca_form.html
+++ b/templates/Producto/marca_form.html
@@ -1,31 +1,35 @@
 {% extends "base.html" %}
 
-{% block title %}Nuevo Producto{% endblock %}
+{% block title %}Nueva Marca{% endblock %}
 
 {% block conte %}
 
-<div class="panel panel-default offer">
-    <div class="panel-heading">
-        <h3> <i class="glyphicon glyphicon-tag"></i> Agregar Marca</h3>
+    <div class="panel panel-default offer">
+        <div class="panel-heading">
+            <h3><i class="glyphicon glyphicon-tag"></i> Agregar Marca</h3>
+        </div>
+        <div class="panel-body">
+            <form role="form" method="POST">{% csrf_token %}
+                {% if form.marca.errors %}
+                    <div class="form-group has-error">
+                {% elif form.errors %}
+                    <div class="form-group has-success">
+                {% else %}
+                    <div class="form-group">
+                {% endif %}
+                <label class="control-label">Marca</label>
+                {{ form.marca }}
+                {{ form.marca.errors }}
+                </div>
+                <button type="submit" class="btn btn-default pull-right"><span
+                        class="glyphicon glyphicon-floppy-saved"></span> Guardar
+                </button>
+            </form>
+        </div>
+        <div class="panel-footer">
+
+        </div>
     </div>
-    <div class="panel-body">
-        <form role="form" method="POST">{% csrf_token %}
-          {% if form.marca.errors %}
-            <div class="form-group has-error">
-          {% else %}
-            <div class="form-group">
-          {% endif %}
-              <label class="control-label">Marca</label>
-              {{form.marca}}
-              {{form.marca.errors}}
-            </div>
-            <button type="submit" class="btn btn-default pull-right"><span class="glyphicon glyphicon-floppy-saved"></span> Guardar</button>
-        </form>
-    </div>
-    <div class="panel-footer">
-      
-    </div>
-</div>
 
 {% endblock %}
 
