--- a/templates/Venta/login.html
+++ b/templates/Venta/login.html
@@ -55,7 +55,7 @@
 							</fieldset>
 						</form>
                         {% if form.errors %}
-                            <p class="text-danger">
+                            <p class="text-danger text-center">
                                 Porfavor introdusca un nombre de usuario y/o contraseña validos.
                                 Considere que ambos campos son sensibles al uso de mayúsculas.
                             </p>
